--- a/bin/gui/view/View.fxml
+++ b/bin/gui/view/View.fxml
@@ -24,7 +24,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1377.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1377.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewController">
    <children>
       <Line endX="-101.5" endY="469.0" layoutX="224.0" layoutY="32.0" startX="1152.0" startY="470.0" stroke="#827f7f" />
       <MenuBar layoutY="-1.0" prefHeight="25.0" prefWidth="1377.0" style="-fx-border-bottom-color: #827f7f; -fx-background-color: #363a39;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
@@ -36,7 +36,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <SplitPane fx:id="splitPaneCentral" dividerPositions="0.002181818181818182" layoutX="84.0" layoutY="25.0" prefHeight="671.0" prefWidth="1293.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <SplitPane fx:id="splitPaneCentral" dividerPositions="0.002909090909090909" layoutX="84.0" layoutY="25.0" prefHeight="671.0" prefWidth="1293.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="669.0" prefWidth="0.0">
                <children>
@@ -115,7 +115,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="92.0" layoutY="647.0" text="Versão 2.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="92.0" AnchorPane.rightAnchor="13.0">
+                  <Label layoutX="100.0" layoutY="649.0" prefHeight="15.0" prefWidth="77.0" text="Versão 2.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="7.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -147,7 +147,7 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="143.0" prefWidth="1376.0">
                                  <children>
-                                    <GridPane layoutX="48.0" layoutY="52.0">
+                                    <GridPane layoutX="17.0" layoutY="34.0" prefHeight="95.0" prefWidth="210.0">
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="50.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="150.0" />
@@ -160,11 +160,11 @@
                                        <children>
                                           <Label text="Cliente:" />
                                           <Label text="Data:" GridPane.rowIndex="1" />
-                                          <DatePicker fx:id="dpDataExcluir" prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <DatePicker fx:id="dpDataExcluir" prefHeight="26.0" prefWidth="171.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                           <TextField fx:id="tfCliente" GridPane.columnIndex="1" />
                                        </children>
                                     </GridPane>
-                                    <Button fx:id="btPesquisar" layoutX="169.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtPesquisaAgendamento" text="Pesquisar">
+                                    <Button fx:id="btPesquisar" layoutX="119.0" layoutY="105.0" mnemonicParsing="false" onAction="#onBtPesquisaAgendamento" text="Pesquisar">
                                        <graphic>
                                           <ImageView fitHeight="27.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -181,8 +181,8 @@
                                           <TableColumn fx:id="colunaExcluir" prefWidth="72.0" text="Excluir?" />
                                        </columns>
                                     </TableView>
-                                    <Line endX="-100.0" endY="193.16668701171875" layoutX="373.0" layoutY="-35.0" startX="-100.0" startY="30.0" stroke="#827f7f" />
-                                    <Button fx:id="btExcluir" layoutX="808.0" layoutY="119.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="33.0" prefWidth="87.0" text="Excluir">
+                                    <Line endX="-100.0" endY="197.0" layoutX="361.0" layoutY="-27.0" startX="-100.0" startY="20.0" stroke="#827f7f" />
+                                    <Button fx:id="btExcluir" layoutX="808.0" layoutY="119.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="35.0" prefWidth="98.0" text="Excluir">
                                        <graphic>
                                           <ImageView fitHeight="25.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -193,7 +193,7 @@
                                     </Button>
                                     <GridPane layoutX="1220.0" layoutY="84.0" prefHeight="79.0" prefWidth="145.0" AnchorPane.rightAnchor="11.0">
                                       <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                       </columnConstraints>
                                       <rowConstraints>
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
